[package]
name = "panduza-rust-pico-io_capture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# Cortex support
cortex-m = { version="0.7.2" }
cortex-m-rt = { version = "0.7"}
critical-section = "1.0"

# Rp pico support
rp2040-boot2 = { version = "0.2.0", optional = true }
rp-pico = "0.5.0"

# Embedded libs
embedded-time = "0.12.0"
embedded-hal = "0.2.5"

# Usb support
usb-device= "0.2.9"
usbd-serial = "0.1.1"
usbd-hid = "0.6.0"

panic-halt= "0.2.0"
heapless = "0.7.9"
fugit = "0.3.5"
numtoa = "0.2.4"
irq = "0.2.3"
# Queue
# bbqueue = "0.5.1" # Not ready yet for this arch atomic.fetch_add(val, order) method not found in `&AtomicUsize`

# Heapless libraries
#heapless = { version = "0.7.10", features = ["serde"] }

# Serde without std + json core
#serde = { version = "1.0", default-features = false, features = ["derive"] }
#serde-json-core = "0.4.0"

# To convert integer
#numtoa = "0.2.4"

#
#arrayvec = { version = "0.7.2", default-features = false }

# To provide base64 algo
#base64 = { version = "0.13.0", default-features = false }

[features]
boot2 = ["rp2040-boot2"]

